1.2.3 (2014-10-??)
------------------

New
~~~

- Make it easier to start the example by removing init_db. [Patrick Uiterwijk]


1.2.2 (2014-04-26)
------------------

Fix
~~~

- First try to utf8 encode, but skip for python3. [evgen]


1.2.1 (2014-01-26)
------------------

Fix
~~~

- Using print() for python 3 compatibility. [Jon Chen]

- Make ask_for_optional optional in debug if ask_for is specified. [Samuel Miller]


1.2 (2014-01-22)
----------------

New
~~~

- Added support for python 3. [Dennis Glindhart, Patrick Uiterwijk]

- Added support for python-openid extensions. [Pierre-Yves Chibon, Jeff Miller, Patrick Uiterwijk]

- Added support for optional sreg keys. [Shay Erlichmen, Patrick Uiterwijk]

- Added the option to declare which URL roots are safe to redirect to [Patrick Uiterwijk]


Fix
~~~

- Small typo fix in documentation. [David Vincelli]

- Fix the import name in the documentation. [William Ting, Amanjeev Sethi]

- Fix pickle.loads crashing on non-ASCII chars. [Shay Erlichmen]